<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragment_add_meeting"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_subject_meeting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="8dp"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_subject_meeting"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_subject_meeting_text"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/text_input_layout_subject_meeting"
                        app:layout_constraintEnd_toStartOf="@id/image_view_subject_meeting"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/image_view_subject_meeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:src="@drawable/ic_arrow_forward_24dp"
                        app:layout_constraintBottom_toBottomOf="@id/label_subject_meeting"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/label_subject_meeting" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/text_input_layout_subject_meeting"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"

                        android:layout_marginBottom="16dp"
                        android:backgroundTint="@color/colorPrimary"
                        android:theme="@style/AppTheme.LighterEditText"
                        android:visibility="visible"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="@id/label_subject_meeting"
                        app:layout_constraintStart_toStartOf="@id/label_subject_meeting"
                        app:layout_constraintTop_toBottomOf="@id/label_subject_meeting">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/text_input_edit_text_meeting_subject"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/colorPrimary"
                            android:fontFamily="sans-serif"
                            android:hint="@string/dialog_text_input_edit_text_hint"
                            android:maxLines="1"
                            android:inputType="text"
                            android:imeOptions="actionDone"
                            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
                    </com.google.android.material.textfield.TextInputLayout>
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_places_meeting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="1dp"
                app:layout_constraintEnd_toEndOf="@+id/card_view_subject_meeting"
                app:layout_constraintStart_toStartOf="@+id/card_view_subject_meeting"
                app:layout_constraintTop_toBottomOf="@+id/card_view_subject_meeting">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_place_name"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_place_name_text"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toTopOf="@id/spinner_places"
                        app:layout_constraintEnd_toStartOf="@id/image_view_place_meeting"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/image_view_place_meeting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:src="@drawable/ic_place_24dp"
                        app:layout_constraintBottom_toBottomOf="@id/label_place_name"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/label_place_name" />

                    <Spinner
                        android:id="@+id/spinner_places"
                        android:layout_width="0dp"
                        android:layout_height="48dp"
                        android:layout_marginBottom="16dp"
                        android:background="@drawable/background_spinner"
                        android:elevation="0dp"
                        android:overlapAnchor="false"
                        android:popupElevation="0dp"
                        android:spinnerMode="dialog"
                        android:visibility="visible"
                        app:layout_constraintBottom_toTopOf="@id/label_meeting_time"
                        app:layout_constraintEnd_toEndOf="@id/label_place_name"
                        app:layout_constraintStart_toStartOf="@id/label_place_name"
                        app:layout_constraintTop_toBottomOf="@id/label_place_name" />

                    <TextView
                        android:id="@+id/label_meeting_time"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_meeting_time_text"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:visibility="gone"
                        app:layout_constraintBottom_toTopOf="@id/meeting_times_list"
                        app:layout_constraintEnd_toEndOf="@id/label_place_name"
                        app:layout_constraintStart_toStartOf="@+id/label_place_name"
                        app:layout_constraintTop_toBottomOf="@+id/spinner_places" />

                    <ImageView
                        android:id="@+id/image_view_meeting_times"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:visibility="gone"
                        android:src="@drawable/ic_access_time_24dp"
                        app:layout_constraintBottom_toBottomOf="@id/label_meeting_time"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/label_meeting_time" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/meeting_times_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:nestedScrollingEnabled="true"
                        android:visibility="gone"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/label_meeting_time"
                        tools:listitem="@layout/item_meeting_time" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/card_view_participants_meeting"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:elevation="2dp"
                app:cardCornerRadius="2dp"
                app:cardElevation="1dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/card_view_places_meeting"
                app:layout_constraintStart_toStartOf="@+id/card_view_places_meeting"
                app:layout_constraintTop_toBottomOf="@+id/card_view_places_meeting">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/label_meeting_participants"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="16dp"
                        android:fontFamily="sans-serif"
                        android:text="@string/label_participants_meeting_text"
                        android:textColor="@android:color/black"
                        android:textSize="17sp"
                        android:textStyle="bold"
                        android:visibility="visible"
                        app:layout_constraintEnd_toStartOf="@id/image_view_meeting_participants"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintBottom_toTopOf="@id/collaborators_list"/>

                    <ImageView
                        android:id="@+id/image_view_meeting_participants"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="24dp"
                        android:src="@drawable/ic_group_add_24dp"
                        app:layout_constraintBottom_toBottomOf="@id/label_meeting_participants"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="@id/label_meeting_participants" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/collaborators_list"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginEnd="8dp"
                        android:nestedScrollingEnabled="true"
                        android:visibility="visible"
                        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/label_meeting_participants"
                        tools:listitem="@layout/item_participant_meeting" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>