<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/add_meeting"
        android:title="@string/add_meeting_title"
        android:icon="@drawable/ic_add_white_24dp"
        app:showAsAction="always"/>
</menu>